mobil view for users page in work

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src="http://localhost:8098"></script>
 		<title>Vite + Vue + TS</title>
 	</head>
-	<body class="h-screen">
-		<div id="app" class="h-full"></div>
+	<body class="h-dvh -w-full">
+		<div id="app" class="h-full w-full"></div>
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
